--- a/index.css
+++ b/index.css
@@ -43,18 +43,19 @@ body{
 
 .main{
     text-align: center;
-    width: 50%;
+    width: 55%;
     border-radius: 10px;
     /* background: #fbee30; */
     background-image: linear-gradient(45deg, rgba(2, 255, 255, 0.7) 0%, rgba(87, 199, 133, 0.7) 50%, rgba(237, 221, 87, 0.7) 100%) ;
     box-shadow: 1px 1px 15px 15px rgb(255, 255, 255, 0.3);
-    padding: 2% 0%;
+    padding: 2%;
+    display: block;
 }
 
 #heading{
     color: rgb(9, 63, 66);
     margin: 2%;
-    font-size: 3.2rem;
+    font-size: 48px;
 }
 
 #name{
@@ -63,7 +64,7 @@ body{
 }
 
 h2{
-    font-size: 2.5rem;
+    font-size: 32px;
 }
 
 #count-el{
@@ -74,12 +75,13 @@ h2{
 button{
     padding: 3% 5%;
     border-radius: 5px;
-    width: 25%;
+    width:100%;
     border: none;
-    margin: 5%;
+    margin: 5% 0%;
     font-size: 18px;
     cursor: pointer;
     text-transform: uppercase;
+    display: block;
 }
 
 .add{
