--- a/index.css
+++ b/index.css
@@ -99,7 +99,7 @@ button{
     font-weight: bold;
 }
 
-@media  (max-screen: 768px) {
+@media (max-width: 768px) {
     .main{
         width: 100%;
     }
